# manus-to-supabase

./: .gitignore  README.md  pyproject.toml
reference/client/src/lib/: auth.ts
reference/client/src/pages/: Auth.tsx  AuthCallback.tsx
reference/server/_core/: supabase-auth.ts  unified-sdk.ts
reference/server/_core/forge-replacement-apis/: README.md  dataApi.ts  imageGeneration.ts  index.ts  llm.ts  maps.ts  storage.ts  voiceTranscription.ts
reference/shared/: supabase-client.ts
src/: __init__.py  migrate.py
tests/: test_migrate.py
